# aerion_code

./: README.md
aerion_crud/: main.py  pyproject.toml
aerion_frontend/: README.md  i18n.ts  middleware.ts  next.config.ts  package-lock.json  package.json
aerion_frontend/src/app/: globals.css  layout.tsx  page.tsx
aerion_frontend/src/app/Components/: AuthGuard.tsx  LanguageSwitcher.tsx  NextIntlProvider.tsx  Sidebar.tsx
aerion_frontend/src/app/[locale]/: layout.tsx
aerion_frontend/src/app/[locale]/dashboard/: layout.tsx  page.tsx
aerion_frontend/src/app/[locale]/dashboard/add-product/: page.tsx
aerion_frontend/src/app/[locale]/dashboard/context/: UserContext.tsx
aerion_frontend/src/app/[locale]/dashboard/inventory_monitoring/: page.tsx
aerion_frontend/src/app/[locale]/dashboard/logs/: page.tsx
aerion_frontend/src/app/[locale]/dashboard/machine-monitoring/: page.tsx
aerion_frontend/src/app/[locale]/dashboard/profit-loss-report/: page.tsx
aerion_frontend/src/app/[locale]/dashboard/purchase-report/: page.tsx
aerion_frontend/src/app/[locale]/dashboard/view-products/: page.tsx
aerion_frontend/src/app/[locale]/login/: page.tsx
aerion_frontend/src/app/locales/en/: common.json
aerion_frontend/src/app/locales/ur/: common.json
aerion_mcp/: Dockerfile  pyproject.toml  requirements.txt  server.py  suppliers_data.py
aerion_mcp/mock_data/: machines.json
aerion_sdk/: agent_logs_autonomous.jsonl  agent_logs_autonomous.txt  configuration.py  main.py  pyproject.toml  requirements.txt
