[project]
name = "aerion-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=5.0.0",
    "bson>=0.5.10",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "jose>=1.0.0",
    "jwt>=1.4.0",
    "motor>=3.7.1",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.40.0",
]
