[project]
name = "aerion-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "cloudinary>=1.44.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "mcp>=1.25.0",
    "motor>=3.7.1",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]
