[project]
name = "aerion-sdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anyio>=4.12.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "mcp>=1.25.0",
    "openai-agents>=0.6.9",
    "pydantic>=2.12.5",
    "python-dateutil>=2.9.0.post0",
    "twilio>=9.10.0",
    "uvicorn>=0.40.0",
]
